<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/black_arrow_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_keyboard_arrow_left_black_48dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/make_reservation"
            android:textColor="#ff9d26"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/constraintHeader" />

    <TextView
        android:id="@+id/roomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintHeader"
        tools:text="Room" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/date_colon"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomName" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date"
        android:inputType="none"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDate"
        app:layout_constraintEnd_toEndOf="@+id/editTextTimeFrom"
        app:layout_constraintStart_toStartOf="@+id/editTextTimeFrom"
        app:layout_constraintTop_toTopOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textViewTimeFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/time_from_colon"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <EditText
        android:id="@+id/editTextTimeFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/time_from"
        android:inputType="none"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTimeFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewTimeFrom"
        app:layout_constraintTop_toTopOf="@+id/textViewTimeFrom" />

    <TextView
        android:id="@+id/textViewTimeTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/time_to_colon"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTimeFrom"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTimeFrom"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimeFrom" />

    <EditText
        android:id="@+id/editTextTImeTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:hint="@string/time_to"
        android:inputType="none"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTimeTo"
        app:layout_constraintEnd_toEndOf="@+id/editTextTimeFrom"
        app:layout_constraintStart_toStartOf="@+id/editTextTimeFrom"
        app:layout_constraintTop_toTopOf="@+id/textViewTimeTo" />

    <Button
        android:id="@+id/submittButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_shape"
        android:fontFamily="sans-serif"
        android:text="@string/make_reservation"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTImeTo" />

</androidx.constraintlayout.widget.ConstraintLayout>