<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="@drawable/marker_dialog_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/labelDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/buttonClose"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        tools:text="Room" />

    <TextView
        android:id="@+id/labelResv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelDesc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/reservations"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelResv"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="18sp"
        tools:text="test tekst" />

    <Button
        android:id="@+id/buttonResv"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/make_reservation"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/x_image"
        app:srcCompat="@drawable/ic_close_black_24dp" />


</RelativeLayout>